--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "private": true,
   "scripts": {
-    "clean": "rimraf dist output .spago",
+    "clean": "rimraf dist output",
     "build": "spago build",
+    "helper": "spago -x helper.dhall build",
     "test": "spago -x test.dhall test"
   },
   "devDependencies": {
     "node-fs": "^0.1.7",
-    "purescript": "^0.13.6",
+    "purescript": "^0.13.8",
     "rimraf": "^3.0.2",
-    "spago": "^0.15.2"
+    "spago": "^0.15.3"
   }
 }
